syntax = "proto3";

package auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string name = 1;
  string surname = 2;
  string email = 3;
  string password = 4;
}

message RegisterResponse {
  string token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
